src/test/ui/closures/2229_closure_analysis/migrations/migrations_rustfix.stderr
error: drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/migrations_rustfix.rs:19:13
   |
LL |       let c = || {
   |  _____________^
LL | |
LL | |
LL | |         let _t = t.0;
LL | |     };
   | |_____^
   |
note: the lint level is defined here
  --> $DIR/migrations_rustfix.rs:2:9
   |
LL | #![deny(disjoint_capture_migration)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: add a dummy let to cause `t` to be fully captured
   |
LL |     let c = || { let _ = &t; 
LL |
LL |
LL |         let _t = t.0;
LL |     };
   |

error: drop order affected for closure because of `capture_disjoint_fields`
  --> $DIR/migrations_rustfix.rs:30:13
   |
LL |     let c = || t.0;
   |             ^^^^^^
   |
help: add a dummy let to cause `t` to be fully captured
   |
LL |     let c = || { let _ = &t; t.0 };
   |                ^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

